objects/vlocity_cmt__OrchestrationItemDefinition__c.object
<CustomObject>
    <description>An orchestration item definition is a defined task that needs to happen in order to fulfill something under one or more fulfillment scenarios. Master-detail child object of Orchestration Plan Definitions.</description>
    <fields>
        <fullName>vlocity_cmt__AmendPlanDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amend Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Amend Item Definitions</relationshipLabel>
        <relationshipName>AmendItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncResponseOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Load type) to apply to response payload provided by an external system via an asynchronous integration adapter.</description>
        <inlineHelpText>Defines Omni Data Transformation (Load type) for response payload provided by an external system via an asynchronous integration adapter.</inlineHelpText>
        <label>Async Response Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncResponseVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Async Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>AsyncRespOrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributesEncodingStyle__c</fullName>
        <label>Attributes Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoTaskParameters__c</fullName>
        <inlineHelpText>Parameters passed to Auto Task</inlineHelpText>
        <label>Auto Task Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CalloutParameters__c</fullName>
        <description>Callout Parameters to be considered for Request Payload generation in System Interface.</description>
        <label>Callout Parameters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__CalloutParameters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancelAmendBehaviour__c</fullName>
        <label>Cancel/Amend Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Freeze</fullName>
                </value>
                <value>
                    <fullName>Amend Push Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConditionData__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Condition__c</fullName>
        <label>Condition (this field is deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomTaskExecutionURL__c</fullName>
        <inlineHelpText>Customization : url for custom VF page or Omni which would launch on selection of any task action/name of the item in a manual queue.</inlineHelpText>
        <label>Custom Task Execution URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ErrorQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions (Error Queue)</relationshipLabel>
        <relationshipName>Orchestration_Item_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EventConditionData__c</fullName>
        <label>Event Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GroupDeveloperName__c</fullName>
        <description>The name of the Salesforce queue that Order Management assigns the manual task to during orchestration.</description>
        <inlineHelpText>Specify the name of the Salesforce queue that the manual task is assigned to during orchestration.</inlineHelpText>
        <label>Salesforce Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPointOfNoReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Point Of No Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSkipBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsUseCustomCallbackURI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom CallbackURI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemLength__c</fullName>
        <label>Item Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Key__c</fullName>
        <formula>vlocity_cmt__OrchestrationPlanDefinitionId__r.Name &amp; &quot;:&quot; &amp; Name</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LengthUnit__c</fullName>
        <label>Length Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ManualTaskExecutionMode__c</fullName>
        <label>Manual Task Execution Mode (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VisualForce Page</fullName>
                    <default>true</default>
                    <label>VisualForce Page</label>
                </value>
                <value>
                    <fullName>Omniscript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfRetries__c</fullName>
        <label>Number Of Retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanDefinitionId__c</fullName>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemsNodeName__c</fullName>
        <defaultValue>&apos;orderItems&apos;</defaultValue>
        <label>Order Items Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessAfter__c</fullName>
        <label>Process After</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueueType__c</fullName>
        <label>Queue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attributes-Based</fullName>
                    <default>true</default>
                    <label>Attributes-Based</label>
                </value>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Least Loaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestItemsEncodingStyle__c</fullName>
        <label>Request Items Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestItemsOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Transform type) to apply to order and fulfilment request items nodes of the request payload.</description>
        <inlineHelpText>Defines Omni Data Transformation (Transform type) for items nodes of the callout request payload generated by an integration adapter.</inlineHelpText>
        <label>Request Items Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Items Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RequestItemsOrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Extract, Turbo Extract or Transform type) to apply to request payload by an integration adapter.</description>
        <inlineHelpText>Defines Omni Data Transformation (Extract, Turbo Extract or Transform type) for callout request payload generated by an integration adapter.</inlineHelpText>
        <label>Request Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseAttrsOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Load type) to apply to attributes of the response payload provided by an external system via an integration adapter.</description>
        <inlineHelpText>Defines Omni Data Transformation (Load type) for attributes of response payload provided by an external system via an integration adapter.</inlineHelpText>
        <label>Response Attrs Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseAttrsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Attrs Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespAttrsOrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseItemsOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Load type) to apply to order items node of the response payload provided by an external system via an integration adapter.</description>
        <inlineHelpText>Defines Omni Data Transformation (Load type) for order item nodes of response payload provided by an external system via an integration adapter. Node name is defined in Order Items Node Name field.</inlineHelpText>
        <label>Response Items Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Items Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespItemsOrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseOmniDataTransformName__c</fullName>
        <description>Name of the Omni Data Transformation (Load type) to apply to response payload provided by an external system via an integration adapter.</description>
        <inlineHelpText>Defines Omni Data Transformation (Load type) for response payload provided by an external system via an integration adapter.</inlineHelpText>
        <label>Response Omni Data Transform Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>ResponseOrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RetryPolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Integration Retry Policy to use on failures</inlineHelpText>
        <label>Retry Policy</label>
        <referenceTo>vlocity_cmt__IntegrationRetryPolicy__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefsForRetryPolicy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RollBackPlanDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rollback Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Rollback Item Definitions</relationshipLabel>
        <relationshipName>RollbackItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RollbackGroup__c</fullName>
        <label>Rollback Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Sales Bundle</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Swimlane</fullName>
                    <default>true</default>
                    <label>Swimlane</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubPlanDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions (Sub-plan Definition)</relationshipLabel>
        <relationshipName>ParentItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubPlanDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-plan Definition (Deprecated)</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions (Sub-plan Definition)</relationshipLabel>
        <relationshipName>MasterItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SystemId__c</fullName>
        <formula>vlocity_cmt__SystemInterfaceId__r.vlocity_cmt__SystemId__c</formula>
        <label>System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SystemInterfaceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Interface</label>
        <referenceTo>vlocity_cmt__SystemInterface__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeoutMs__c</fullName>
        <label>Timeout  (ms)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity DataMapper Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__itemImplementationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Implementation</label>
        <referenceTo>vlocity_cmt__ItemImplementation__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__manualQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>OrchestrationItemDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestration Item Definition</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Item Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Item Definitions</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__AutoTask</fullName>
        <active>true</active>
        <label>Auto Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Callout</fullName>
        <active>true</active>
        <label>Callout</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ManualTask</fullName>
        <active>true</active>
        <label>Manual Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Milestone</fullName>
        <active>true</active>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__PullEvent</fullName>
        <active>true</active>
        <label>Pull Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__PushEvent</fullName>
        <active>true</active>
        <label>Push Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__SubPlan</fullName>
        <active>true</active>
        <label>Sub-plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__TimeoutMinValueValidation</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__TimeoutMs__c &lt; 0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__TimeoutMs__c</errorDisplayField>
        <errorMessage>Timeout cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>